--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,129 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+html, body {
+  width: 100%;
+  height: 100%;
+  background-color: aquamarine;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.main_div {
+  width: 100%;
+  height: 100vh;
+  background-color: rgb(159, 144, 173);
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-direction: row;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  text-align: center;
+
+
+}
+.center_div {
+  width: 25%;
+  height: 80vh;
+  background-color: cornsilk;
+  box-shadow: 5px 5px 25px -5px black;
+  border-radius: 15px;
 }
 
-.App-link {
-  color: #61dafb;
+.center_div h1 {
+  color: aliceblue;
+  background-color: blue;
+  padding: 6px 0 2px 0;
+  margin-bottom: 10px;
+  box-shadow: 5px 5px 10px -5px black;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.center_div input {
+  text-align: center;
+  height: 30px;
+  width: 60%;
+  top: 10px;
+  border: none;
+  background: transparent;
+  font-size: 20px;
+  font-weight: 500;
+  border-bottom: 2px solid #8566aa;
+  outline: none;
+}
+.center_div button {
+  min-height: 40px;
+  width: 45px;
+  border-radius: 50%;
+  border-color: transparent;
+  background-color: #8566aa;
+  color: #fff;
+  font-size: 40px;
+  border: none;
+  outline: none;
+  margin-left: 10px;
+  box-shadow: 5px 5px 10px -5px black;
+}
+
+.center_div button:hover {
+  background-color: green;
+}
+
+ol {
+  margin-top: 30px;
+
+}
+ol li {
+  padding-left: 0px;
+  text-align: left;
+  font-size: 20px;
+  font-weight: 500;
+  min-height: 40px;
+  display: flex;
+  align-items: center;
+  color: #8566aa;
+  text-transform: capitalize;
+}
+
+.todo_style {
+  display: flex;
+  flex-direction: row;
+  justify-content: left;
+  align-items: center;
+}
+
+.todo_style i {
+  width: 20px;
+  height: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 10px;
+  margin-right: 15px;
+  color: rgb(207, 134, 65);
+  font-weight: 550;
+  font-size: 20px;
+}
+
+.todo_style i:hover {
+  color: red;
+}
+
+@media (max-width: 768px) {
+  .center_div {
+    width: 55%;
   }
-  to {
-    transform: rotate(360deg);
+
+  .todo_style i{
+    margin: 0 15px 0 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  button {
+    margin-left: 5px;
+    min-height: 40px;
+    width: 40px;
+    color: #fff;
+    font-size: 30px;
   }
 }
